fixed padding on container page, adjusted edit container button alignment

--- a/cms/static/sass/elements/_xblocks.scss
+++ b/cms/static/sass/elements/_xblocks.scss
@@ -23,13 +23,12 @@
     border-radius: ($baseline/5) ($baseline/5) 0 0;
     min-height: ($baseline*2.5);
     background-color: $gray-l6;
-    padding: ($baseline/2);
+    padding: ($baseline/2) ($baseline/2) ($baseline/2) ($baseline);
 
     .header-details {
       @extend %cont-truncated;
       @extend %ui-justify-left-flex;
       @include ui-flexbox();
-      padding-left: flex-gutter();
       width: flex-grid(6,12);
       vertical-align: top;
     }
